legacy/cluster/home-assistant/home-assistant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      nodeName: yoshi
      containers:
        - name: home-assistant
          image: docker.io/homeassistant/home-assistant:2025.2@sha256:dae013e0bd935bf8dc500adef771604a3fd03dc5f2ca13b9566f51a094e3f8bf
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tz-config
              mountPath: /etc/localtime
            - mountPath: /dev/ttyUSB0
              name: dev
          securityContext:
            privileged: true
      volumes:
        - name: config
          hostPath:
            path: /static/ha
            type: Directory
        - name: tz-config
          hostPath:
            path: /etc/localtime
            type: File
        - name: dev
          hostPath:
            path: /dev/ttyUSB0
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/target: luma.chrismiller.xyz
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ha.luma.chrismiller.xyz
      secretName: ha-luma-tls
  rules:
    - host: ha.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
